--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kyle's Travel Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Welcome to Kyle’s Travel Blog</h1>
+    <h1>Kyle’s Travel Blog</h1>
+    <p class="subtitle">Chronicles of exploration, pixels, and places</p>
   </header>
 
-  <section>
-    <p>Adventure begins here. Follow my journey as I wander across cities, forests, coastlines, and cultures. This blog will collect moments, photos, and links to the hidden wonders I encounter.</p>
+  <section class="intro">
+    <p>Welcome! This travel blog is a reflection of my journeys through landscapes near and far. Each entry captures a day, a place, or a perspective—along with the little joys in between.</p>
+    <p>Scroll down or use the links to explore entries, galleries, stories, and discoveries along the road.</p>
   </section>
 
-  <nav>
+  <nav class="main-nav">
     <ul>
-      <li><a href="day1/day1.html">Practice Link 1 - Day 1 Entry</a></li>
-      <li><a href="https://www.lonelyplanet.com" target="_blank">Visit Lonely Planet</a></li> 
+      <li><a href="day1/day1.html">Day 1: Beginnings</a></li>
+      <li><a href="day2/day2.html">Day 2: Coastline Drift</a></li>
+      <li><a href="photos/gallery.html">Gallery</a></li>
+      <li><a href="places/places.html">Places</a></li>
+      <li><a href="projects/projects.html">Projects</a></li>
+      <li><a href="mailto:kyle@example.com">Email Me</a></li>
+      <li><a href="https://www.atlasobscura.com" target="_blank">Atlas Obscura 🌍</a></li>
+      <li><a href="https://www.lonelyplanet.com" target="_blank">Lonely Planet</a></li>
     </ul>
   </nav>
+
+  <footer>
+    <p>&copy; 2025 Kyle Hansen | Travel Blog Project for Web Design Class</p>
+  </footer>
 </body>
 </html>
