--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <section class="intro">
-    <p>Welcome! This travel blog is a reflection of my journeys through landscapes near and far. Each entry captures a day, a place, or a perspective—along with the little joys in between.</p>
+    <p>Welcome! This travel blog is a reflection of my journeys through landscapes near and far. Each entry captures a day, a place, or a perspective, along with the little joys in between.</p>
     <p>Scroll down or use the links to explore entries, galleries, stories, and discoveries along the road.</p>
   </section>
 
