--- a/day0.html
+++ b/day0.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Day 0 – Packing & Planning</title>
-</head>
+</head> <link rel="stylesheet" href="styles.css">
 <body>
   <header>
     <h1>Day 0 – Packing & Planning</h1>
