--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>About This Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+</head> <link rel="stylesheet" href="styles.css">
 <body>
   <header>
     <h1>About This Travel Blog</h1>
