--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <nav class="main-nav">
     <ul>
-      <li><a href="day1/day1.html">Day 1: Beginnings</a></li>
-      <li><a href="day2/day2.html">Day 2: Coastline Drift</a></li>
-      <li><a href="photos/gallery.html">Gallery</a></li>
-      <li><a href="places/places.html">Places</a></li>
+      <li><a href="day1/day1.html">Day 1 Adventure</a></li>
+      <li><a href="day2/day2.html">Day 2 Exploration</a></li>
+      <li><a href="gallery/gallery.html">Gallery</a></li>
       <li><a href="projects/projects.html">Projects</a></li>
+      <li><a href="places/places.html">Places</a></li>
       <li><a href="mailto:kyle@example.com">Email Me</a></li>
       <li><a href="https://www.atlasobscura.com" target="_blank">Atlas Obscura 🌍</a></li>
       <li><a href="https://www.lonelyplanet.com" target="_blank">Lonely Planet</a></li>
