--- a/projects/projects.html
+++ b/projects/projects.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Travel Projects</title>
-  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="/travelblog/styles.css" />
 </head>
 <body>
   <header>
     <h1>Ongoing Explorations</h1>
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="../places/places.html">Places</a>
-      <a href="../photos/gallery.html">Gallery</a>
+      <a href="/travelblog/index.html">Home</a>
+      <a href="/travelblog/places/places.html">Places</a>
+      <a href="/travelblog/photos/gallery.html">Gallery</a>
     </nav>
   </header>
 
@@ -26,21 +26,23 @@
         <h2>📷 Portraits of the Sahara</h2>
         <p>
           A photojournalism series documenting the faces and daily rituals of nomadic tribes across the Sahara. View the series 
-          <a href="../photos/gallery.html">here</a>.
+          <a href="/travelblog/photos/gallery.html">here</a>.
         </p>
       </article>
 
       <article>
         <h2>🛖 Ethnobotany & the Atlas</h2>
         <p>
-          A documentation of traditional medicine practices observed in remote Amazigh communities. Full write-up <a href="https://example.com/ethnobotany" target="_blank">here</a>.
+          A documentation of traditional medicine practices observed in remote Amazigh communities. Full write-up 
+          <a href="https://example.com/ethnobotany" target="_blank" rel="noopener noreferrer">here</a>.
         </p>
       </article>
 
       <article>
         <h2>🎶 Field Recordings: Evening Markets</h2>
         <p>
-          A sonic tapestry of Moroccan night markets, from Fes to Essaouira. Listen to an excerpt <a href="https://soundcloud.com/example" target="_blank">here</a>.
+          A sonic tapestry of Moroccan night markets, from Fes to Essaouira. Listen to an excerpt 
+          <a href="https://soundcloud.com/example" target="_blank" rel="noopener noreferrer">here</a>.
         </p>
       </article>
     </section>
