--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,6 +13,7 @@
       <a href="gallery.html">Gallery</a>
       <a href="day1.html">Day 1</a>
       <a href="day2.html">Day 2</a>
+      <a href="../photos/gallery.html">Gallery</a>
     </nav>
   </header>
 
